# stac-asset

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASING.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt
.github/workflows/: ci.yaml  release.yaml
docs/: api.rst  cli.rst  conf.py  design-goals.rst  environment.yaml  index.rst
src/stac_asset/: __init__.py  __main__.py  _cli.py  _download.py  _functions.py  blocking.py  client.py  config.py  constants.py  earthdata_client.py  errors.py  filesystem_client.py  functions.py  http_client.py  messages.py  planetary_computer_client.py  s3_client.py  strategy.py  types.py  usgs_eros_client.py  validate.py
tests/: conftest.py  test_blocking.py  test_cli.py  test_config.py  test_download.py  test_earthdata_client.py  test_filesystem_client.py  test_functions.py  test_http_client.py  test_open.py  test_planetary_computer_client.py  test_s3.py  test_s3_client.py  test_usgs_eros.py  test_usgs_eros_client.py  test_validate.py
tests/cassettes/test_http_client/: test_href_exists.yaml
tests/cassettes/test_planetary_computer_client/: test_href_exists.yaml
tests/cassettes/test_s3_client/: test_href_exists.yaml
tests/data/: LC09_L2SP_092068_20230607_20230609_02_T1_SR.json  catalog.json  collection.json  item.json
