[project]
name = "stac-asset"
version = "0.2.2"
description = "Read and download STAC assets across platforms and providers"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
readme = "README.md"
keywords = ["stac", "async"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "aiofiles>=23.1.0",
    "aiobotocore>=2.5.0",
    "aiohttp>=3.8.4",
    "pystac>=1.8.4",
    "python-dateutil>=2.7.0",
    "yarl>=1.9.2",
]

[project.optional-dependencies]
cli = [
    "click~=8.1.5",
    "click-logging~=1.0.1",
    "tabulate~=0.9.0",
    "tqdm~=4.66.1",
]
dev = [
    "black~=23.3",
    "mypy~=1.3",
    "pre-commit~=3.3",
    "pystac[validation]>=1.8.4",
    "pytest~=7.3",
    "pytest-asyncio~=0.21",
    "pytest-cov~=4.1",
    "ruff==0.0.291",
    "types-aiofiles~=23.1",
    "types-python-dateutil~=2.8.19",
    "types-tqdm~=4.66.0",
    "types-tabulate~=0.9.0",
]
docs = ["pydata-sphinx-theme~=0.13", "sphinx~=7.2.2", "sphinx-click~=5.0"]

[project.scripts]
stac-asset = "stac_asset._cli:cli"

[project.urls]
Github = "https://github.com/stac-utils/stac-asset"
CHANGELOG = "https://github.com/stac-utils/stac-asset/blob/main/CHANGELOG.md"
Issues = "https://github.com/stac-utils/stac-asset/issues"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "aiobotocore.session",
    "aiobotocore",
    "botocore",
    "botocore.config",
    "click_logging",
]
ignore_missing_imports = true


[tool.ruff]
select = ["F", "E", "W", "I", "ERA", "RUF", "D"]
ignore = ["D100", "D105", "D107"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D"]
"docs/conf.py" = ["D"]
"src/stac_asset/_cli.py" = ["D301"]

[tool.ruff.pydocstyle]
convention = "google"
