[project]
name = "stac-asset"
version = "0.4.0"
description = "Read and download STAC assets across platforms and providers"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
readme = "README.md"
keywords = ["stac", "async"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=23.1.0",
    "aiobotocore>=2.5.0",
    "aiohttp>=3.8.4",
    "pystac>=1.8.4",
    "python-dateutil>=2.7.0",
    "yarl>=1.9.2",
]

[project.optional-dependencies]
cli = [
    "click~=8.1.5",
    "click-logging~=1.0.1",
    "tabulate~=0.9.0",
    "tqdm~=4.66.1",
]
dev = [
    "mypy~=1.3",
    "pre-commit~=3.3",
    "pystac[validation]>=1.8.4",
    "pytest~=8.2",
    "pytest-asyncio~=0.21",
    "pytest-cov>=5.0",
    "pytest-recording~=0.13.1",
    "ruff==0.4.10",
    "types-aiofiles~=23.1",
    "types-python-dateutil~=2.9",
    "types-tqdm~=4.66.0",
    "types-tabulate~=0.9.0",
]
docs = ["pydata-sphinx-theme~=0.13", "sphinx~=7.3", "sphinx-click~=6.0"]

[project.scripts]
stac-asset = "stac_asset._cli:cli"

[project.urls]
Github = "https://github.com/stac-utils/stac-asset"
CHANGELOG = "https://github.com/stac-utils/stac-asset/blob/main/CHANGELOG.md"
Issues = "https://github.com/stac-utils/stac-asset/issues"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "aiobotocore.session",
    "aiobotocore",
    "botocore",
    "botocore.config",
    "click_logging",
]
ignore_missing_imports = true


[tool.ruff.lint]
select = ["F", "E", "W", "I", "ERA", "RUF", "D"]
ignore = ["D100", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"docs/conf.py" = ["D"]
"src/stac_asset/_cli.py" = ["D301"]

[tool.ruff.lint.pydocstyle]
convention = "google"
