[project]
name = "stac-asset"
version = "0.4.6"
description = "Read and download STAC assets across platforms and providers"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
readme = "README.md"
keywords = ["stac", "async"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.1.0",
    "aiobotocore>=2.5.0",
    "aiohttp~=3.12",
    "pystac>=1.8.4",
    "python-dateutil>=2.7.0",
    "yarl>=1.9.2",
    "aiohttp-oauth2-client~=2.0",
    "aiohttp-retry>=2.8.3",
]

[project.optional-dependencies]
cli = [
    "click~=8.2.0",
    "click-logging~=1.0.1",
    "tabulate~=0.9.0",
    "tqdm~=4.67.0",
]

[dependency-groups]
dev = [
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "pystac[validation]>=1.11.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-recording>=0.13.2",
    "ruff>=0.6.9",
    "types-aiofiles>=24.1.0.20240626",
    "types-python-dateutil>=2.9.0.20241003",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx>=8.1.3",
    "sphinx-click>=6.0.0",
]

[project.scripts]
stac-asset = "stac_asset._cli:cli"

[project.urls]
Github = "https://github.com/stac-utils/stac-asset"
CHANGELOG = "https://github.com/stac-utils/stac-asset/blob/main/CHANGELOG.md"
Issues = "https://github.com/stac-utils/stac-asset/issues"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "aiobotocore.session",
    "aiobotocore",
    "botocore",
    "botocore.config",
    "click_logging",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning:botocore",                              # https://github.com/boto/boto3/issues/3889
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "ERA", "RUF", "D"]
ignore = ["D100", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"docs/conf.py" = ["D"]
"src/stac_asset/_cli.py" = ["D301"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
